# taskmanager-stackchan

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
app/: main.py
app/client/: base.py  google_client.py  input_provider.py  trello_client.py  voicevox_client.py
app/controller/: stackchan_controller.py
app/model/: stackchan_mode.py  task.py  task_status.py
app/service/: conversation_manager.py  person_detector.py  reminder_service.py  task_manager.py
app/utils/: time_parser.py
task_assistant/: __init__.py  main.py
task_assistant/data/: tasks.db
task_assistant/db/: dao.py  models.py
task_assistant/scheduler/: __init__.py  reminders.py
task_assistant/tests/: conftest.py  test_dao.py  test_meta.py  test_poller.py  test_reminder.py  test_time.py
task_assistant/trello/: poller.py  webhook.py
task_assistant/util/: time.py
tests/service/: test_reminder_service.py
vosk-server/: Dockerfile
