[project]
name = "task-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Hiroyuki Kaneko",email = "neconoko.develop@gmail.com"}
]
packages = [
    { include = "task_assistant" }   # â† add this line
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
